--- a/Pagina web.qmd
+++ b/Pagina web.qmd
@@ -3,26 +3,159 @@ title: "Mi pagina web V"
 author: "Geison Vilca Lopez"
 format: html
 editor: visual
+toc: true
+toc-location: left
+number-sections: true
+embed-resources: true
 output-file: index
 ---
 
-## Quarto
-
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
+# analisis de datos
 
 ```{r}
-1 + 1
+library(readxl)
+data <- read_excel("LA MOLINA 2014 POTATO WUE (FB).xlsx" ,sheet = 2)
+head (data)
 ```
 
-You can add options to executable code like this
+## Modelo lineal
 
 ```{r}
-#| echo: false
-2 * 2
+modelo <- lm (formula = lfa ~ block + geno + riego +riego*geno, data = data)
+anova (modelo)
 ```
 
-The `echo: false` option disables the printing of code (only output is displayed).
+#Grafica:
+
+```{r}
+
+library (ggplot2)
+ggplot(data, aes(x = factor(geno), y = lfa, fill = factor(riego))) +
+  geom_boxplot() +
+  labs(x = "Genotipo", y = "LFA (Respuesta)", fill = "Riego") +
+  theme_minimal() +
+  ggtitle("Boxplot de LFA por Genotipo y Tratamiento de Riego")
+```
+
+```{r}
+library(inti)
+model <- remove_outliers(data = data
+                         ,formula = lfa ~ riego + geno + riego * geno+ (1 | bloque)
+                         , plot_diag = T
+                         ) 
+model
+```
+
+# Uso de aqricolae para comparación de medias
+
+```{r}
+library(agricolae)
+modelo <- lm(formula = lfa ~  bloque + riego + geno + riego*geno
+          , data = data)
+
+anova(modelo)
+# test de tukey
+tukey_result <- HSD.test(modelo
+                         , c("geno", "riego")
+                         , group = TRUE)
+tukey_result
+
+#Ahora realizamos el grafico de los resultados
+plot(tukey_result)
+```
+
+```{r}
+str(tukey_result)
+tukey_result
+library(tidyverse)
+
+grupos <- tukey_result$groups %>% 
+  rownames_to_column("tratamientos") %>% 
+  separate(tratamientos, into = c("geno", "riego")
+           , sep = ":")
+
+str(grupos)
+```
+
+```{r}
+# GGplot de tukey
+ggplot(grupos, aes(x = geno, y = lfa, fill = riego)) +
+  geom_bar(stat = "identity", position = "dodge", color = "black") +
+  geom_text(aes(label = groups, y = lfa + 0.05), 
+            position = position_dodge(width = 0.9), 
+            vjust = 0) +
+  labs(x = "Genotipo", y = "LFA", fill = "Riego") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+  ggtitle("Gráfico de barras: LFA por genotipo y riego")
+```
+
+# Comparación de medias con emmeans
+
+```{r}
+if (!requireNamespace("emmeans", quietly = TRUE)) {
+  install.packages("emmeans")
+}
+library(emmeans)
+
+if (!requireNamespace("multcomp", quietly = TRUE)) {
+  install.packages("multcomp")
+}
+library(multcomp)
+```
+
+## Gráfico
+
+# Análisis multivariados
+
+```{r}
+str(data)
+```
+
+## Correlación
+
+```{r}
+library(psych)
+
+data %>% 
+  select_if(is.numeric) %>% 
+  dplyr::select(!c("block")) %>% 
+  pairs.panels(x = .
+               , hist.col="red"
+               , pch = 21
+               , stars = TRUE
+               , scale = FALSE
+               , lm = TRUE
+               ) 
+```
+
+## PCA: Análisis de componentes principales
+
+```{r}
+library(FactoMineR)
+
+if (!requireNamespace("cowplot", quietly = TRUE)) {
+  install.packages("cowplot")
+}
+library(cowplot)
+
+
+mv <- data %>% 
+  group_by(riego, geno) %>% 
+  summarise(across(where(is.numeric), ~ mean(., na.rm = TRUE))) %>% 
+  PCA(scale.unit = T, quali.sup = c(1:4), graph = F)
+
+
+p1 <- plot(mv
+     , choix="ind"
+     , habillage=1
+     , label = "ind"
+     )
+
+
+p2 <- plot(mv
+     , choix="var")
+
+list(p1, p2) %>% 
+  plot_grid(plotlist = ., nrow = 1)
+```
